--- a/index.css
+++ b/index.css
@@ -87,3 +87,21 @@ ul li:hover {
     background-color: #457B9D;
     cursor: pointer;
 }
+
+footer {
+    font-size: 10px;
+    color: #F1FAEE;
+    margin-top: 20px;
+    padding: 5px;
+    display: flex;
+    justify-content: space-between;
+}
+
+footer a {
+    color: #F1FAEE;
+    text-decoration: none;
+}
+
+footer a:hover {
+    color: #457B9D;
+}
